--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
     <title>Easywords</title>
   </head>
-  <body class="h-full">
+  <body class="min-h-full h-full">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="h-full" id="root"></div>
 
