--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body class="min-h-full h-full">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="h-full" id="root"></div>
+    <div
+      class="h-full py-4 px-8 dark:bg-zinc-800 flex flex-col"
+      id="root"
+    ></div>
 
     <script src="/src/index.tsx" type="module"></script>
   </body>
