add: tester mobile design
This also unifies both the mobile and desktop design to make things
easier to manage.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body class="min-h-full h-full">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div
-      class="h-full py-4 px-8 dark:bg-zinc-800 flex flex-col"
+      class="h-full p-4 sm:px-8 dark:bg-zinc-800 flex flex-col"
       id="root"
     ></div>
 
