change: structure the page better
Aligns heading with the content, add app name, puts border on the nav
and adds spacing so that the content is more legible.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
   </head>
   <body class="min-h-full h-full">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div
-      class="h-full p-2 sm:px-4 dark:bg-zinc-800 flex flex-col"
-      id="root"
-    ></div>
+    <div class="h-full dark:bg-zinc-800 flex flex-col" id="root"></div>
 
     <script src="/src/index.tsx" type="module"></script>
   </body>
