add: PWA manifest
Which makes it installable. PNG logo is a must, ico nor svg can be used.

I previously thought I should use some vite plugin like vite-pwa-org but
in the end I found it too complicated to use and just decided to do it
by hand. After all, the only thing I needed to do was to have
manifest.json unprocessed by vite into base64, which I wanted just to
have it readable. This I achieved by referencing it through absolute
path in index.html. And then I needed to have both in the public folder
automatically, which I achieved by creating /public in the project root
and this way it gets copied automatically into /dist with Vite, neat!

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/logo.ico" />
+    <link rel="manifest" href="manifest.json" />
     <title>Easywords</title>
   </head>
   <body class="min-h-full h-full">
