--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/logo.ico" />
+    <link rel="apple-touch-icon" sizes="512x512" href="apple-touch-icon.png" />
     <link rel="manifest" href="manifest.json" />
     <title>Easywords</title>
   </head>
