change: theme color

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, interactive-widget=resizes-content"
     />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#16A34A" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/logo.ico" />
     <link rel="apple-touch-icon" sizes="512x512" href="apple-touch-icon.png" />
     <link rel="manifest" href="manifest.json" />
