--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1, interactive-widget=resizes-content"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+      rel="stylesheet"
+    />
     <meta name="theme-color" content="#16A34A" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/logo.ico" />
     <link rel="apple-touch-icon" sizes="512x512" href="apple-touch-icon.png" />
